# gl-orrery

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
assets/shaders/: 3.3.shader.frag  3.3.shader.vert
include/Orrery/: Common.h  Engine.h  Mesh.h  Renderer.h  Shader.h
legacy/monolith/src/: main.cpp
scripts/: build.sh  conan-install.sh
src/: Engine.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  main.cpp
